@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix bug #2017648 "applying devourer weap causes crash", this was a division by
+zero bug that affected any "personalized blessings" weapons with a willpower in
+the range 0-1000. Also fix some minor issues in the same code block (reordering
+tests and reusing a variable instead of fetching it using get_ob_key_value 
+twice).
+ server/apply.c
+Arvid Norlander 2008-07-17
+
 In debug log message, check for null value and substitute as needed - it is
 not universal that printf("%s", NULL) will not crash.
 MSW 2008-07-07
